fix prevent element stretch

--- a/styles/css/preset.css
+++ b/styles/css/preset.css
@@ -45,7 +45,6 @@ object {
 
 img,
 video {
-  max-width: 100%;
   height: auto;
 }
 
